k8s/bioops-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bioops-api
  namespace: bioops-dev
  labels:
    app: bioops-api
spec:
  type: ClusterIP
  selector:
    app: bioops-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
